Do not load the dashboard if there is no data.

--- a/app/views/freeboard/dashboard/index.html.erb
+++ b/app/views/freeboard/dashboard/index.html.erb
@@ -46,8 +46,11 @@
       url    : '/_get_board/<%= @dashboard.key %>',
       success: function(data)
       {
-        source.loadDashboard(data.data);
-        source.setEditing(false);
+        if(Object.keys(data.data).length > 0)
+        {
+          source.loadDashboard(data.data);
+          source.setEditing(false);
+        }
       }
     });
   }
