Append the querystring to the request to get the board.

--- a/app/views/freeboard/dashboard/index.html.erb
+++ b/app/views/freeboard/dashboard/index.html.erb
@@ -43,7 +43,7 @@
   {
     $.ajax({
       type: 'get',
-      url    : '/_get_board/<%= @dashboard.key %>',
+      url    : '/_get_board/<%= @dashboard.key %>' + location.search,
       success: function(data)
       {
         if(Object.keys(data.data).length > 0)
