Allow prevent_editing in data to disable the editor button.

--- a/app/views/freeboard/dashboard/index.html.erb
+++ b/app/views/freeboard/dashboard/index.html.erb
@@ -58,6 +58,9 @@
   $(document).ready(function(){
     setTimeout(function(){
       $('#full-screen').click();
+      <% if @dashboard.data['prevent_editing'] %>
+        $('#toggle-header').hide()
+      <% end %>
     }, 1000);
   });
 
